8288644: [lw4] Unable to extend a separately compiled abstract value class

Reviewed-by: fparain